[package]
authors = ["Dominic Clifton <me@dominicclifton.name>"]
edition = "2021"
readme = "README.md"
name = "makerpnpcore-w25q16jv"
version = "0.1.0"

[dependencies]
flash-algorithm = { version = "0.7.0" }
rtt-target = { version = "0.6.2" }
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy", rev = "f1c6bb7df80e592b7a7edc709f546771506806d3", features = ["stm32h735ig", "unstable-pac", "time-driver-tim2"] }
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "f1c6bb7df80e592b7a7edc709f546771506806d3", features = ["tick-hz-32_768"] }

cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"

# this lets you use `cargo fix`!
[[bin]]
name = "makerpnpcore-w25q16jv"
test = false
bench = false

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = "fat"
opt-level = 's'
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false
